docs-archive/versioned_docs/version-1.6.0/docs/managed-datahub/release-notes/v_0_3_15.md
---
description: >-
  DataHub Cloud v0.3.15 release notes from October 2025 with OIDC security
  fixes, frontend gzip proxy, and Gen AI daily token limits.
title: v0.3.15
slug: /managed-datahub/release-notes/v_0_3_15
custom_edit_url: >-
  https://github.com/datahub-project/datahub/blob/master/docs/managed-datahub/release-notes/v_0_3_15.md
---

# v0.3.15

:::info

This contains detailed release notes, but there's also an [announcement blog post](https://datahub.com/blog/datahub-cloud-v0-3-15/) that covers the highlights.

:::

#### Release Availability Date

31-Oct-2025

#### Recommended Versions

- **CLI/SDK**: 1.3.1.1.post1
- **Remote Executor**: v0.3.15-acryl (recommended), v0.3.14-acryl, v0.3.13.2-acryl, v0.3.13.1-acryl, v0.3.13-acryl, v0.3.12.4-acryl
- **On-Prem Versions**:
  - **Helm**: 1.5.140
  - **API Gateway**: 0.5.4
  - **Actions**: 0.0.3

## Release Changelog

### v0.3.15.6-acryl

#### Release Availability Date

7-Apr-2026

#### Security

- OIDC: Stop exposing the client secret via GraphQL (use `hasClientSecret` only) and fix SSO save errors by omitting read-only fields from the update mutation.

#### Platform

- **Gzip / frontend proxy**: The frontend HTTP filter chain now includes Play’s enabled filters (including `GzipFilter`) in addition to the base-path redirect filter, so proxied responses can be compressed again. Non-streaming proxied traffic (for example GraphQL) uses a buffered body path so gzip applies; paths configured as streaming (for example SSE for AI chat) stay streamed. Upstream `Content-Encoding` and `Transfer-Encoding` are stripped on buffered responses so the gzip filter can run; streaming responses set `Content-Encoding: identity` so they are not double-compressed. Streaming path prefixes are configurable via `proxy.streamingPathPrefixes` / `PROXY_STREAMING_PATH_PREFIXES`.

#### Gen AI

- **Daily LLM token limit**: Integrations service enforces a per-day token budget for LLM calls (tracked in UTC, resets at midnight UTC). Default limit is 20 million tokens; configure with `GENAI_DAILY_TOKEN_LIMIT` (use `0` to disable). Calls check the limit before invoking the model and record usage after each response; when the limit is exceeded, new calls fail fast with a clear error.

### v0.3.15.5-acryl

- Fix for automations stability
- OpenAPI Operations Endpoints: Debugging endpoints added for k8 and kafka.
- Assertion Hook Performance Improvement: Aspects and URNs are now fetched in batches.
- Elasticsearch 8: Fix role creation

### v0.3.15.4-acryl

- Elasticsearch 7: Fix role creation
- Elasticsearch/Opensearch: Allow role to inspect nodes for query optimization
- **Assertions on remote executor**: There was a state management bug in the coordinator on `3.15-acryl` which caused assertions to stop running on remote workers. This infrastructure bug has been fixed and tested for to prevent future regressions.

### v0.3.15-acryl

New Features:

- **Asset Docs File Upload**: You can now upload files directly to asset and schema field documentation! This feature, currently in private beta, supports images, PDFs, CSVs, and more, allowing you to consolidate all your information in one place — in DataHub!
- **Platforms Home Page Module**: A new Platforms module is now available for your homepage, allowing you to highlight the different platforms represented in your DataHub instance.
- **Structured Property Settings**: You can now hide structured properties from your asset sidebar when no value is set. This lets you highlight important properties while minimizing noise by hiding unset ones.
- Moved logical models OpenAPI APIs to their own controller at `/v3/logical/` and added bulk DELETE endpoint
- **Bulk Un-Mark Anomalies**: Unmark several anomalies in one go via the 'Tune predictions' modal
- **SQL expressions for Column validity assertions**: Validate columns against reference tables with SQL expressions.
- **SQL Anomaly Detection**: Detect anomalies on the return value of your SQL assertions. This feature requires seven days of training data and cannot be bootstrapped from historical results.
- **Bulk Subscription Management**: Manage all of your and your groups' subscriptions in the new subscription dashboard. You can search and filter through your subscriptions, and bulk edit or delete them.
- **New Search Filter: Asset-Level Lineage**: Quickly narrow down large sets of Search results sets to identify well-connected assets with established lineage dependencies.
- **Custom AI Documentation Instructions**: Configure custom base prompts used to guide our AI model when generating documentation for Tables and Columns. Useful to enforce standards, guidelines, best practices.
- **Custom Ask DataHub Instructions**: Configure custom base prompts used to guide our AI assistant when generating answers to user questions. Useful for providing organization-wide context that can be used to inform AI responses in Slack + Teams.
- **Ask DataHub in DataHub** (Private Beta): Have conversations with DataHub AI directly inside DataHub's interface in a new Chat experience. Reach out to your customer support representative for more information.
- **IAM Authentication Support**: MySQL and PostgreSQL sources now support IAM authentication.
- **Unity Catalog/Databricks**: Use SQL to extract query history for usage instead of API calls.
- **Fivetran Google Sheets Support**: Added Google Sheets connector support with Fivetran API client integration.

Fixes:

- **Quality Tab Performance**: Page performance when loading hundreds of assertions is significantly improved with this release
- **Hierarchy Module Auth Fix**: Previously, if a user was not able to view a Domain in a hierarchy module, we would not show anything. Now we always return the Domains in this module that a user is authorized to see as expected.
- **Domains & Glossary Names Truncation**: Previously, if someone opened up the asset sidebar and that caused the name of a Domain or Glossary entity, we would show the truncated name with "..." and if they closed the sidebar the name would remain truncated. This odd UI bug should now be resolved.
- **Ask DataHub Settings Refresh**: Previously, restart of integrations service pod was required for enable/disable change for Ask DataHub (@DataHub) settings to take effect. Now, the settings are auto-refreshed every 5 minutes.
- **Invite Users**: Fixes for better discoverability of the feature.
- **Comprehensive Ingestion Log Export**: Resolves issue where Ingestion Log downloads were truncated due to large file size; available for all ingestion runs, including those using DataHub Remote Executor.
- **Empty Column Names**: Fixed handling of empty column names from Snowflake access history that were causing ingestion failures.
- **SQLAlchemy Compatibility**: Fixed compatibility issues with SQLAlchemy 1.4+ versions.
- **Pydantic v2 upgrade in SDK**: Removed support for Pydantic v1, migrated to Pydantic v2.
- **Bug fixes and performance fixes in ~11 connectors**: Snowflake, Dremio, MSSQL, MongoDB, Delta Lake, Teradata, Redshift, Metabase, Grafana, CockroachDB, MariaDB, etc.

## Known Issues

- Assertions do not run on remote executor deployment modes. Please look to 3.15.4 for the fix.
- There is some backward incompatibilities between older remote executors and 3.15 GMS. Remote executors may need to be upgraded to resolve these.
- PATCH of the Ownership aspect does not support assigning the same owner to multiple ownership type urns
- If you were to upgrade to v0.3.15 and create a "Platforms" home page module, in order to roll back to a previous version of DataHub you will need to either (1) remove the Platforms modules from all home page templates or (2) roll back to v0.3.14.2 which includes a fix to handle unknown module types. This sort of backwards compatibility with home page modules is resolved going forward with v0.3.15.
